# FastFractal

./: .gitignore  Dockerfile  Makefile  README.md
src/: compress.cpp  decompress.cpp  jpeg_initial  jpeg_initial.cpp  main.cpp  main2.cpp  metrics.cpp  sierpinski  sierpinski.cpp
src/benchmarking/: CMakeLists.txt  GraphParallel.py  GraphScales.py  benchmark_file.cpp  benchmark_parallel.cpp  benchmark_scales.cpp
src/include/: api.h
test_infra/: README.md  benchmark_file.sh  benchmark_parallel.sh  benchmark_scales.sh  install_graph_tools.sh
